@@ -1,1 +1,0 @@
-${env:MODULES_BASE_PATH}/media/libmedia-ffmpeg.so
