@@ -35,7 +35,6 @@ export UDEB_PKG := $(SHARED_PKG)-udeb
 export DOC_PKG := libgtk-$(APIVER)-doc
 export BIN_PKG := libgtk-$(APIVER)-bin
 export MEDIA_GSTREAMER_PKG := libgtk-$(APIVER)-media-gstreamer
-export MEDIA_FFMPEG_PKG := libgtk-$(APIVER)-media-ffmpeg
 export EXAMPLES_PKG := gtk-$(APIVER)-examples
 export TESTS_PKG := gtk-$(APIVER)-tests
 
@@ -59,7 +58,6 @@ debian/%: debian/%.in
 		-e "s#@DOC_PKG@#$(DOC_PKG)#g" \
 		-e "s#@BIN_PKG@#$(BIN_PKG)#g" \
 		-e "s#@MEDIA_GSTREAMER_PKG@#$(MEDIA_GSTREAMER_PKG)#g" \
-		-e "s#@MEDIA_FFMPEG_PKG@#$(MEDIA_FFMPEG_PKG)#g" \
 		-e "s#@EXAMPLES_PKG@#$(EXAMPLES_PKG)#g" \
 		-e "s#@TESTS_PKG@#$(TESTS_PKG)#g" \
 		-e "s#@LIBDIR@#$(LIBDIR)#g" \
@@ -120,14 +118,6 @@ ifeq ($(filter %-tests,$(built_binaries)),)
 configure_flags_deb += -Dinstall-tests=false
 else
 configure_flags_deb += -Dinstall-tests=true
-endif
-
-# Upstream consider the ffmpeg backend to be experimental, let's not
-# build that by default.
-ifeq ($(filter $(MEDIA_FFMPEG_PKG),$(built_binaries)),)
-configure_flags_deb += -Dmedia-ffmpeg=disabled
-else
-configure_flags_deb += -Dmedia-ffmpeg=enabled
 endif
 
 ifeq ($(shell dpkg-vendor --is Ubuntu && echo yes), yes)
