@@ -1,8 +1,13 @@
 gtk4 (4.14.2+ds-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Update the packaging to no refer to the ffmpeg experimental backend
+    which has been removed upstream now
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 03 Apr 2024 15:20:17 +0200
+  [ Jeremy Bícha ]
+  * New upstream release
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 27 Feb 2024 12:03:26 +0100
 
 gtk4 (4.12.5+ds-6) unstable; urgency=medium
 
